--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <title>Bordeaux</title>
     <meta name='description' content='Bordeaux Text Board'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&amp;subset=cyrillic' rel='stylesheet'>
     <link rel='stylesheet' href='{{ url_for("static", path="/css/style.css") }}'>
   </head>
 
