--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,85 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f8f8f8;
+}
+
+body {
+  margin: 0;
+}
+
+.header {
+  background-color: #fff;
+  padding: 20px;
+}
+.welcome-msg {
+  text-align: center;
+  font-size: 16px;
+  margin: 0;
+}
+
+.posts,
+.post-form {
+  margin: 0 auto;
+  width: 800px;
+  max-width: 100%;
+}
+
+.posts .post {
+  margin: 10px;
+  padding: 12px;
+  font-size: 14px;
+  background-color: #fff;
+  border-radius: 4px;
+}
+.posts .post .time {
+  color: #888;
+  font-style: italic;
+}
+.posts .post .time::after {
+  content: ':';
+}
+.posts .post .text {
+  color: #333;
+}
+
+.post-form {
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid rgba(0, 0, 0, .1)
+}
+.post-form textarea {
+  margin: 10px;
+  padding: 12px;
+  resize: vertical;
+  border-radius: 4px;
+  border: 0;
+}
+
+.post-form textarea:focus {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .05), 0 5px 20px 0 rgba(0, 0, 0, .05);
+}
+
+.post-form button {
+  margin-left: auto;
+  margin-right: 10px;
+  background-color: #000;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  border: 0;
+  border-radius: 4px;
+  text-transform: uppercase;
+  height: 30px;
+  width: 80px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.post-form button:hover {
+  background-color: #002D1F;
+  color: #99F3D7;
 }
