--- a/templates/thread_preview.html
+++ b/templates/thread_preview.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   {% endif %}
-  <div class='end'>
+  <div class='thread-end'>
     <a href='#' class='reload-link'></a>
   </div>
 </div>
