--- a/templates/board.html
+++ b/templates/board.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-<div class='container'>
+<div class='container board-wrapper'>
   <div class='board'>
     {% for thread in threads %}
       {% include 'thread_preview.html' %}
