--- a/templates/board_posting.html
+++ b/templates/board_posting.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-<div class='container'>
+<div class='container board-posting'>
   {% include 'writer.html' %}
 </div>
 {% endblock %}
