--- a/templates/common.html
+++ b/templates/common.html
@@ -35,6 +35,7 @@
     {% block content %}{% endblock %}
   </div>
 </div>
+<script src='{{ url_for("static", path="/js/lib/flipping.web.js") }}'></script>
 <script src='{{ url_for("static", path="/js/lib/highlight/highlight.pack.js") }}'></script>
 <script>hljs.initHighlightingOnLoad();</script>
 {% endblock %}
