--- a/static/css/post.css
+++ b/static/css/post.css
@@ -7,7 +7,7 @@
 .post:not(:last-child) {
   margin-bottom: 1em;
 }
-.post:target {
+.posts .post:target {
   box-shadow: inset 0 0 0 2px rgb(var(--key));
 }
 .post .head {
@@ -40,7 +40,7 @@
   .post .head .offset span {
     display: none;
   }
-  .post:target {
+  .posts .post:target {
     box-shadow: inset 2px 0 0 0 rgb(var(--key));
   }
 }
