--- a/templates/thread.html
+++ b/templates/thread.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 <div class='container'>
-  <div class='thread-end'>
+  <div class='thread-end' data-flip-key='thread-end'>
     <a href='#' class='reload-link'></a>
   </div>
 </div>
