--- a/templates/writer.html
+++ b/templates/writer.html
@@ -19,9 +19,11 @@
 </form>
 <script>
   function resizeTextarea(ev) {
-      this.style.height = 'auto'
-      this.style.height = this.scrollHeight + 'px'
+    console.log(ev)
+    this.style.height = 'auto'
+    this.style.height = this.scrollHeight + 'px'
   }
   var te = document.querySelector('textarea')
   te.addEventListener('input', resizeTextarea)
+  te.addEventListener('focus', resizeTextarea)
 </script>
