Fix welcome text. Bump Python version to 3.8 for no reason.

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
           {% endfor %}
         </ul>
       {% else %}
-        <div class='no-boards'>Congratulations! There is no any boards yet. Be first to create one!</div>
+        <div class='no-boards'>Congratulations! There are no boards yet. Be first to create one!</div>
       {% endif %}
     </div>
   </div>
